# Aiyagari1994QJE

./: .gitignore  .markdownlint.jsonc  AI_REPOSITORY_DESCRIPTION.md  AiyagariMarkovHARK.ipynb  AiyagariMarkovHARK.ipynb.py  AiyagariMarkovHARK_baseline.ipynb  Aiyagari_Equations.html  Aiyagari_Sympy_to_Latex.py  CITATION.cff  DOCKER.md  Dockerfile  README-IF-YOU-ARE-AN-AI.md  README.md  REMARK.md  baseline_ci_test.py  benchmark.py  compute.py  docker-compose.yml  pyproject.toml  rag_config.yaml  reproduce.sh  reproduce_min.sh  run_baseline.sh  run_full.sh  test_notebook_content.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
AI/chats/: 20250630_sonnet_improvements.md
aiyagari/: core.py
binder/: environment.yml
prompts_local/: 20250630_prepare-for-final-vetting.md
symbolic/: README.md  model_expressions.pkl  symbol_descriptions.pkl
