[tool.poetry]
name = "aiyagari1994qje"
version = "1.0.0"
description = "Computational implementation of Aiyagari (1994) model of uninsured idiosyncratic risk and aggregate saving"
authors = ["Adam Edwards <edwardsadam01@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
econ-ark = "0.13.0"
jupyter = "^1.0.0"
notebook = "^7.0.0"
matplotlib = "^3.7.0"
numpy = "^1.24.0"
scipy = "^1.9.0"
pandas = "^2.0.0"
ipython = "^8.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0" 